--- a/docs/ensip/5.mdx
+++ b/docs/ensip/5.mdx
@@ -52,7 +52,7 @@ Global Keys must be made up of lowercase letters, numbers and the hyphen (-).
 * **description** - A description of the name
 * **display** - a canonical display name for the ENS name; this MUST match the ENS name when its case is folded, and clients should ignore this value if it does not (e.g. `"ricmoo.eth"` could set this to `"RicMoo.eth"`)
 * **email** - an e-mail address
-* **keywords** - A list of comma-separated keywords, ordered by most significant first; clients that interpresent this field may choose a threshold beyond which to ignore
+* **keywords** - A list of comma-separated keywords, ordered by most significant first; clients that interpret this field may choose a threshold beyond which to ignore
 * **mail** - A physical mailing address
 * **notice** - A notice regarding this name
 * **location** - A generic location (e.g. `"Toronto, Canada"`)
