--- a/docs/ensip/6.mdx
+++ b/docs/ensip/6.mdx
@@ -48,7 +48,7 @@ The arguments for the function are as follows:
 
 Although it is possible to clear records individually with `setDNSRecords()` as described above this requires the owner to know all of the records that have been set (as the resolver has no methods to iterate over the records for a given domain), and might require multiple transactions. `clearDNSZone()` removes all zone information in a single operation.
 
-The arguments for the function is as follows:
+The arguments for the function are as follows:
 
 -   node: the namehash of the fully-qualified domain in ENS for which to clear the records. Namehashes are defined in #137
 
